--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,10 +12,12 @@
 }
 
 .cell {
-    width: calc(100% / 8);
+    width: calc(100% / 10);
     border: 1px solid white;
     aspect-ratio: 1/1;
     color: white;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .bg_green {
